Add icon.ico and small tweak styles

--- a/ChronicleLog.App/ChronicleLog.App.csproj
+++ b/ChronicleLog.App/ChronicleLog.App.csproj
@@ -4,6 +4,10 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <AssemblyName>Chronicle Log</AssemblyName>
+    <Authors>IvandryPage</Authors>
+    <Company>IvandryPage</Company>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,7 +16,6 @@
 
   <ItemGroup>
     <Folder Include="Resources\Fonts\" />
-    <Folder Include="Resources\Images\" />
   </ItemGroup>
 
   <ItemGroup>
